--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -2,6 +2,8 @@
 	width: 100%;
 	margin: 10px;
 	padding: 0;
+	display: flex;
+	justify-content: center;
 
 	@media #{$tablet} {
 		-webkit-flex: 1 0 180px;
@@ -10,7 +12,7 @@
 
 	li {
 		list-style: none;
-		margin: 15px auto;
+		margin: 15px;
 
 		@media #{$tablet} {
 			max-width: 150px;
@@ -70,7 +72,7 @@ footer {
 	padding: 50px 0 50px 0;
 	font-size: 1.1em;
 	position: relative;
-	background: #2b2b40;
+	background: #141414;
 	color: #fff;
 
 	.copyright {
