--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
-$brand-color: #152f03;
-$secondary-brand-color: #152f03;
+$brand-color: #255802;
+$secondary-brand-color: #255802;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
